--- a/server/package.json
+++ b/server/package.json
@@ -17,7 +17,8 @@
     "express-graphql": "^0.7.1",
     "graphql": "^14.1.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.4.19"
+    "mongoose": "^5.4.19",
+    "validator": "^10.11.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.2.3",
